fix: double scroll in mobile fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,6 +31,10 @@ body {
   font-kerning: normal;
 }
 
+main {
+  overflow: hidden;
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
